# UTEBackend

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: release.yaml
Backend/: Backend.cpp  Backend.hpp  Core.hpp  Util.hpp
Backend/Core/: Defines.hpp
Backend/Platform/: Unix.cpp  Unix.hpp  Windows.cpp  Windows.hpp
